# axum-service-template

./: Cargo.toml  README.md
src/: main.rs  server.rs
src/server/: health.rs  index.rs
