[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6"
itertools = "0.12"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
